# docscrape

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/docscrape/: __init__.py  __main__.py  cli.py
src/docscrape/adapters/: __init__.py  factory.py  generic.py  livekit.py  pipecat.py  retellai.py
src/docscrape/core/: __init__.py  interfaces.py  models.py
src/docscrape/discovery/: __init__.py  llms_txt.py  recursive.py  sitemap.py
src/docscrape/engine/: __init__.py  crawler.py
src/docscrape/storage/: __init__.py  filesystem.py
tests/: __init__.py  conftest.py  test_adapters.py  test_cli.py  test_models.py
